Revision history for Catmandu-Stat

{{$NEXT}}

0.10  2016-06-30 07:42:51 CEST
  - calculating statistics without keepin all data in memory
  - adding more tests
  - deleting mode count
  - making uniq% and entropic calculations estimated and thereby
    needing much less memory
  - new topk, hll options to tune the estimate count
    
0.04  2015-11-02 14:57:56 CET
  - fixing locales in the tests

0.03  2015-06-18 10:03:08 CEST
  - adding entropy statistic
  - adding uniq count
  - adding default table layout
  - adding default keys support
  - adding examples

0.02  2015-05-18 09:35:35 CEST
  - updating dependencies

0.01  2015-05-13 14:49:28 CEST
  - initial release