@@ -1,7 +1,8 @@
 Revision history for Catmandu-Stat
 
 {{$NEXT}}
-
+  - adding total number of records count
+  
 0.10  2016-06-30 07:42:51 CEST
   - calculating statistics without keepin all data in memory
   - adding more tests
@@ -9,7 +10,7 @@ Revision history for Catmandu-Stat
   - making uniq% and entropic calculations estimated and thereby
     needing much less memory
   - new topk, hll options to tune the estimate count
-    
+
 0.04  2015-11-02 14:57:56 CET
   - fixing locales in the tests
 
